# zero2prod_rs

./: Cargo.toml  LICENSE  README.md
.github/install-protobuf/: action.yml
.github/workflows/: frontend.yml  general.yml  install_protobuf.yml  rust.yml
configuration/: base.yaml  production.yaml
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: navbar.tsx
frontend/src/components/: navbar.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/admin/: index.tsx
frontend/src/pages/api/admin/: email.ts
frontend/src/pages/api/auth/: [...auth0].js
migrations/: 20230406125857_add_status_to_subscriptions.sql  20230406130154_create_subscriptions_tokens_table.sql
src/: main.rs
src/routes/: health_check.rs
webserver/: Cargo.toml  sqlx-data.json
webserver/src/: configuration.rs  create_subscriber.http  lib.rs  startup.rs  telemetry.rs
webserver/src/domain/: subscriber_email.rs  subscriber_name.rs
webserver/src/email/: mod.rs
webserver/src/routes/: admin_test.rs  health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
webserver/tests/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
webserver/tests/harness/: jwk_private_key.der  jwk_public_key.json  jwks.rs  mod.rs  postgres.rs
