[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-web-codegen = { workspace = true }
webserver = { path = "webserver" }

[workspace]
members = [
    "webserver"
]

[workspace.dependencies]
actix-web = "4.3.1"
actix-web-codegen = "4.2.0"