[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-web-codegen = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
tracing-bunyan-formatter = "0.3.6"
webserver = { path = "webserver" }

[workspace]
members = [
    "webserver",
]

[workspace.dependencies]
actix-web = "4.3.1"
actix-web-codegen = "4.2.0"
log = "0.4.17"
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "offline", "macros", "postgres", "uuid", "chrono", "migrate"] }
