[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-web-codegen = { workspace = true }
config = "0.13.3"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix-rustls"] }
tokio = { version = "1.26.0", features = ["macros", "tracing", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }