[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-web-codegen = { workspace = true }
sqlx = { workspace = true }
config = "0.13.3"
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1.26.0", features = ["macros", "tracing", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.158", features = ["derive"] }
serde-aux = "4.1.2"
log = { workspace = true }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = "0.4.24"

[dev-dependencies]
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git" }
