[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-web-codegen = { workspace = true }
sqlx = { workspace = true }
config = "0.13.3"
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1.26.0", features = ["macros", "tracing", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.158", features = ["derive"] }
serde-aux = "4.1.2"
log = { workspace = true }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing-actix-web = "0.7.3"
validator = "0.16.0"
rand = "0.8.5"
unicode-segmentation = "1.10.1"
tracing-opentelemetry = "0.18.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"

[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
linkify = "0.9.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.94"
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs.git" }
wiremock = "0.5.17"
